--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Landing</a></li>
-							<li><a href="generic.html">Generic</a></li>
-							<li><a href="elements.html">Elements</a></li>
-							<li><a href="about.html">Elements</a></li>
+							<li><a href="articulo.html">Home</a></li>
+							<li><a href="articulo.html">Landing</a></li>
+							<li><a href="articulo.html">Generic</a></li>
+							<li><a href="articulo.html">Elements</a></li>
+							<li><a href="articulo.html">Elements</a></li>
 						</ul>
 						<ul class="actions stacked">
 							<li><a href="#" class="button primary fit">Get Started</a></li>
